k8s/webapp-deploy-svc.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: webapp
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: docker.io/wangxisea/dp:0.1
        imagePullPolicy: Always
        command:
          - "gunicorn"
        args:
          - "--workers"
          - "1"
          - "--bind"
          - "0.0.0.0:80"
          - "--env"
          - "DJANGO_SETTINGS_MODULE=settings.local"
          - "--access-logfile"
          - "/code/logs/access.log"
          - "--error-logfile"
          - "/code/logs/error.log"
          - "apps.wsgi"
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: "300m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: default
  labels:
    app: webapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webapp
  type: LoadBalancer
