k8s/ns_tony_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-controller-tony-ingress-auth
  namespace: ns-tony
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: https,http
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://webapp.default.svc.cluster.local:5000/hi/auth
    ingress.kubernetes.io/auth-sigin: https://console.deepvega.com/hi/login
    ingress.kubernetes.io/auth-response-headers: X-Auth-User, X-Secret
spec:
  rules:
  - host: tony.zeppelin.deepvega.com
    http:
      paths:
        - path: /
          backend:
            serviceName: spark-tony-zeppelin
            servicePort: 8080
  - host: tony.spark-ui.deepvega.com
    http:
      paths:
        - path: /
          backend:
            serviceName: spark-tony-master
            servicePort: 8080
