k8s/webapp-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-controller-default-ingress
  namespace: default
  labels:
    k8s-app: traefik-ingress-controller
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: https,http
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: console.deepvega.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 5000
  - host: console.dp.com
    http:
      paths:
        - path: /
          backend:
            serviceName: webapp
            servicePort: 5000

#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: traefik-ingress-controller-default-ingress-auth
#  labels:
#    k8s-app: traefik-ingress-controller
#  annotations:
#    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: http
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
#    ingress.kubernetes.io/auth-type: forward
#    ingress.kubernetes.io/auth-url: http://console.deepvega.com/api/v1/users/callback/
#    ingress.kubernetes.io/auth-response-headers: X-Auth-User, X-Secret
#spec:
#  rules:
#  - host: tony.spark-ui.deepvega.com
#    http:
#      paths:
#        - path: /
#          backend:
#            serviceName: webapp
#            servicePort: 5000

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-serviceaccount
      terminationGracePeriodSeconds: 35
      volumes:
        - name: traefik-ui-tls-cert
          secret:
            secretName: traefik-ui-tls-cert
        - name: traefik-drone-tls-cert
          secret:
            secretName: traefik-drone-tls-cert
        - name: traefik-ingress-configmap
          configMap:
            name: traefik-ingress-configmap
      containers:
      - image: traefik:1.7.12
        name: traefik-ingress-controller
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 384Mi
          requests:
            cpu: 25m
            memory: 128Mi
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /ping
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /ping
            port: 80
            scheme: HTTP
          periodSeconds: 5
        volumeMounts:
          - mountPath: "/ssl/ui"
            name: "traefik-ui-tls-cert"
          - mountPath: "/ssl/drone"
            name: "traefik-drone-tls-cert"
          - mountPath: "/config"
            name: "traefik-ingress-configmap"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        args:
        - --logLevel=INFO
        - --configfile=/config/traefik.toml


---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-http-service
  annotations: {}
    # service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - protocol: TCP
    port: 80
    name: http
  - protocol: TCP
    port: 443
    name: https
  type: LoadBalancer
